# uring-kv

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md  README.md  README.ru.md
.github/workflows/: ci.yml
bench/: README.md
cmake/: Findliburing.cmake
include/: kv_store.hpp  protocol.hpp  uring_loop.hpp
src/: kv_store.cpp  main.cpp  protocol.cpp  uring_loop.cpp
tools/: client.py  test_kv.cpp  test_protocol.cpp
